fixed mobile first for the entire ccustomer service section. Also some minor design fixes with the navbar where the hamburger menu and dropdown menu got hidden under some of the images on the website. I resolved it with z-index.

--- a/CoreFitness.Presentation/wwwroot/css/site.css
+++ b/CoreFitness.Presentation/wwwroot/css/site.css
@@ -156,6 +156,7 @@
     .dropdown-container {
         display: flex;
         gap: 1rem;
+        
     }
     .dropdown {
     display: flex;
@@ -167,6 +168,7 @@
     cursor: pointer;
     border: none;
     outline: none;
+    
 }
     .dropdown:hover {
     background-color: var(--hovergreen-color);
@@ -174,8 +176,6 @@
     .desktop-only { 
     display: none; 
     }
-
-
 
 /*HAMBURHER NAVBAR JAVASCRIPT*/
 .hamburger-menu {
@@ -195,6 +195,8 @@
     transition: 0.6s;
     list-style: disc;
     list-style-position: inside;
+    position: fixed;
+    z-index: 9999;
 }
 .hamburger-text { 
     text-decoration: none;
@@ -275,6 +277,8 @@ color: var(--hovergreen-color);
     background-color: var(--lightgreen-color);
     border-radius: 20px;
     transition: 0.6s;
+    position: fixed;
+    z-index: 9999;
 }
 .training-menu.active {
     top: 0;
@@ -581,7 +585,6 @@ color: var(--hovergreen-color);
         
     }
 }
-
     /*PRODUCTS SECTION*/
     .products-container {
         background-color: var(--gray-background-color);
@@ -741,7 +744,6 @@ font-size: 1.7rem;
 }
 /*FOOTER END*/
 
-
 /*MEMBERSHIPBENEFITS*/
 .membership-benefits {
     display: flex;
@@ -754,9 +756,6 @@ font-size: 1.7rem;
     padding: 1rem;
     font-family: "DM sans", sans-serif;
 }
-
-
-
 
 /*MEMBERSHIP*/
 .membership-bg {
@@ -922,6 +921,7 @@ font-size: 1.7rem;
     gap: 1rem;
     margin-top: 2rem;
     margin-bottom: 2rem;
+    
 }
 @media (min-width: 768px) {
 .accordion-container {
@@ -934,10 +934,15 @@ font-size: 1.7rem;
     padding-left: 1rem;
 }
 .accordion-section2 {
-    margin-top: 3rem;
     margin-bottom: 3rem;
     padding: 2rem;
 }
+@media (min-width: 768px) {
+.accordion-section2 {
+    margin-top: 3rem;
+    }
+}
+
 .accordion-title {
     font-family: "Poppins", sans-serif;
     font-size: 2.5rem;
@@ -987,6 +992,14 @@ cursor: pointer;
 
 /*CUSTOMER SERVICE CONTACT US*/
 /*vänster*/
+.gym-woman {
+    border-radius: 20px 20px 20px 20px;
+}
+@media (min-width: 768px) {
+.gym-woman {
+   border-radius: 20px 0px 0px 20px;
+    }
+}
 .cs-bg {
     background-color: var(--gray-background-color);
     padding-bottom: 2rem;
@@ -1054,20 +1067,37 @@ font-weight: 600;
     display: flex;
     flex-direction: column;
 }
-
-/*höger*/
+/*CUSTOMER SERVICE*/
+/*höger sida*/
 .cs-left-right-container {
     display: flex;
+    flex-direction: column;
+    margin: 1rem; 
+}
+@media (min-width: 768px) {
+    .cs-left-right-container {
+    display: flex;
+    flex-direction: row;
     margin: 1rem 1rem 0 0; 
+    }
 }
 .cs-left {
     padding-left: 1rem;
 }
 .cs-right {
-    border-radius: 0px 20px 20px 0px ;
+    border-radius: 20px 20px 20px 20px;
     background-color: white;
     padding-left: 3rem;
     padding-top: 3rem;
+    padding-bottom: 2rem;
+    margin-top: 2rem;
+}
+    @media (min-width: 768px) {
+    .cs-right {
+    border-radius: 0px 20px 20px 0px ;
+    margin-top: 0rem;
+    padding-bottom: 0rem;
+    }
 }
 .cs-right-title {
     font-family: "Poppins", sans-serif;
@@ -1082,8 +1112,7 @@ font-weight: 600;
     padding-bottom: 2rem;
 }
 
-
-
+/*CUSTOMER SERVICE - vänster sida (formulär)*/
 .forum-grid, .writebox-label {
     display: grid;
     grid-template-columns: 1fr 1fr; 
@@ -1123,124 +1152,9 @@ textarea {
     resize: none;  
 }
 .forms-btn {
-margin-top: 2.5rem;
+margin-top: 1.5rem;
 }
-
-
-/*REGISTER*/
-.register-bg {
-    background-color: var(--gray-background-color);
-     padding: 3rem 3rem 3rem 3rem;
-}
-.register-flexbox {
-     justify-content: center;
-     display: flex;
-}
-
-.register-white-form {
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    padding: 3rem 3rem 3rem 3rem;
-    border-radius: 20px;
-    width: 800px;
-    height: 760px;
-}
-
-.register-text {
-    color: #6F6F6F;
-}
-.register-endnote,
-.register-text,
-.register-hr-text {
-    font-family: "DM sans", sans-serif;
-}
-
-
-.register-middle {
-    display: flex;
-     gap: 1rem;
-}
-.register-hr-text {
-    display: flex;
-    width: 70%;
-    margin-top: 2rem;
-    align-items: center;
-    justify-content: center;
-    color: #6F6F6F;
-}
-.register-hr {
-    background-color: #E6E6E6;
-    border: none;
-    height: 1px;
-    margin: 20px 0;
-    width: 100%;
-    margin-top: 3rem;
-}
-
-.register-title {
-    font-family: "Poppins", sans-serif;
-    font-size: 3rem;
-}
-
-.register-green {
-    display: flex;
-    justify-content: center;
-    margin-top: 2rem;
-}
-
-.register-btn {
-    width: 70%;
-    display: flex;
-    justify-content: center;
-}
-.register-endnote {
-    display: flex;
-    justify-content: center;
-    color: #6F6F6F;
-    padding-top: 2rem;
-}
-
-
-
-
-
-
-
-/*SETPASSWORD*/
-.placeholder-padding-wrapper {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    font-weight: 700;
-    font-size: 0.9rem;
-    font-family: "Poppins", sans-serif;
-    gap: 0.5rem;
-    padding-top: 1rem;
-    margin-top: 1rem;
-}
-.green-email {
-    background-color: rgb(231, 252, 231);
-    border-radius: 10px;
-    padding: 1rem;
-    margin-bottom: 0.5rem;
-    margin-top: 0.5rem;
-    font-weight: 600;
-}
-
-
-/*Ger mellanrum ovanför titlarna Email, password, confirmpassword*/
-.password-label, .email-label {
-    margin-top: 1rem;
-}
-
-
-
-
-
-
-
-/*POPUP-MESSAGE*/
+/*POPUP-MESSAGE I CUSTOMER SERVICE*/
 .popup-container {
     background-color: var(--gray-background-color);
     border: 2px solid black;
@@ -1248,7 +1162,6 @@ margin-top: 2.5rem;
     padding: 2rem;
     margin-top: 5rem;
     margin-right: 3rem;
-
     display: flex;
     text-align: center;
     flex-direction: column;
@@ -1301,3 +1214,104 @@ margin-top: 2.5rem;
 .message-btn:hover {
     background: var(--hovergreen-color);
 }
+
+/*BECOME MEMBER*/
+/*REGISTER*/
+.register-bg {
+    background-color: var(--gray-background-color);
+     padding: 3rem 3rem 3rem 3rem;
+}
+.register-flexbox {
+     justify-content: center;
+     display: flex;
+}
+.register-white-form {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    padding: 3rem 3rem 3rem 3rem;
+    border-radius: 20px;
+    width: 800px;
+    height: 760px;
+}
+.register-text {
+    color: #6F6F6F;
+}
+.register-endnote,
+.register-text,
+.register-hr-text {
+    font-family: "DM sans", sans-serif;
+}
+.register-middle {
+    display: flex;
+     gap: 1rem;
+}
+.register-hr-text {
+    display: flex;
+    width: 70%;
+    margin-top: 2rem;
+    align-items: center;
+    justify-content: center;
+    color: #6F6F6F;
+}
+.register-hr {
+    background-color: #E6E6E6;
+    border: none;
+    height: 1px;
+    margin: 20px 0;
+    width: 100%;
+    margin-top: 3rem;
+}
+.register-title {
+    font-family: "Poppins", sans-serif;
+    font-size: 3rem;
+}
+.register-green {
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+}
+.register-btn {
+    width: 70%;
+    display: flex;
+    justify-content: center;
+}
+.register-endnote {
+    display: flex;
+    justify-content: center;
+    color: #6F6F6F;
+    padding-top: 2rem;
+}
+/*BECOME MEMBER*/
+/*SETPASSWORD*/
+.placeholder-padding-wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    font-weight: 700;
+    font-size: 0.9rem;
+    font-family: "Poppins", sans-serif;
+    gap: 0.5rem;
+    padding-top: 1rem;
+    margin-top: 1rem;
+}
+.green-email {
+    background-color: rgb(231, 252, 231);
+    border-radius: 10px;
+    padding: 1rem;
+    margin-bottom: 0.5rem;
+    margin-top: 0.5rem;
+    font-weight: 600;
+}
+/*Ger mellanrum ovanför titlarna Email, password, confirmpassword*/
+.password-label, .email-label {
+    margin-top: 1rem;
+}
+
+
+
+
+
+
+
+
